// Copyright (c) 2018-2022 The MobileCoin Foundation

/// Streaming Ledger Sync API.

syntax = "proto3";

package streaming_blocks;

import "blockchain.proto";

message SubscribeRequest {
    /// Block index to start from.
    uint64 starting_height = 1;
}

service LedgerUpdates {
    rpc Subscribe(SubscribeRequest) returns (stream blockchain.ArchiveBlock);
}
